@@ -75,6 +75,7 @@ typedef struct {
     Rboolean isLatin1; /* = FALSE */
     Rboolean isUTF8; /* = FALSE */
     Rboolean atStart;
+    Rboolean embedWarn;
     char convbuf[100];
 } LocalData;
 
@@ -209,8 +210,10 @@ strtoraw (const char *nptr, char **endptr)
 
 static R_INLINE int scanchar_raw(LocalData *d)
 {
-    return (d->ttyflag) ? ConsoleGetcharWithPushBack(d->con) :
+    int c = (d->ttyflag) ? ConsoleGetcharWithPushBack(d->con) :
 	Rconn_fgetc(d->con);
+    if(c == 0) d->embedWarn = TRUE;
+    return c;
 }
 
 static R_INLINE void unscanchar(int c, LocalData *d)
@@ -815,7 +818,7 @@ SEXP attribute_hidden do_scan(SEXP call, SEXP op, SEXP args, SEXP rho)
     const char *p, *encoding;
     RCNTXT cntxt;
     LocalData data = {NULL, 0, 0, '.', NULL, NO_COMCHAR, 0, NULL, FALSE,
-		      FALSE, 0, FALSE, FALSE};
+		      FALSE, 0, FALSE, FALSE, FALSE};
     data.NAstrings = R_NilValue;
 
     checkArity(op, args);
@@ -967,6 +970,7 @@ SEXP attribute_hidden do_scan(SEXP call, SEXP op, SEXP args, SEXP rho)
     if (!data.ttyflag && !data.wasopen)
 	data.con->close(data.con);
     if (data.quoteset[0]) free(data.quoteset);
+    if (data.embedWarn) warning(_("embedded nul found in input"));
     return ans;
 }
 
